--- a/public/index.html
+++ b/public/index.html
@@ -10,6 +10,19 @@
     <!-- TODO: <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" /> -->
     <!-- TODO: <link rel="icon" href="%PUBLIC_URL%/favicon.ico" /> -->
 
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+
+    <link
+      rel="preconnect"
+      href="https://fonts.gstatic.com"
+      crossorigin="anonymous"
+    />
+
+    <link
+      href="https://fonts.googleapis.com/css2?family=Lato:ital,wght@0,300;0,400;0,700;0,900;1,300;1,400;1,700&display=swap"
+      rel="stylesheet"
+    />
+
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
     <title>Customer Zero</title>
   </head>
