add interactive question

--- a/public/index.html
+++ b/public/index.html
@@ -9,6 +9,7 @@
 
     <!-- TODO: <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" /> -->
     <!-- TODO: <link rel="icon" href="%PUBLIC_URL%/favicon.ico" /> -->
+    <!-- TODO: <link rel="manifest" href="%PUBLIC_URL%/manifest.json" /> -->
 
     <link rel="preconnect" href="https://fonts.googleapis.com" />
 
@@ -23,7 +24,6 @@
       rel="stylesheet"
     />
 
-    <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
     <title>Customer Zero</title>
   </head>
   <body>
