add logout and change application name

--- a/public/index.html
+++ b/public/index.html
@@ -5,7 +5,7 @@
 
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="theme-color" content="#000000" />
-    <meta name="description" content="Customer Zero" />
+    <meta name="description" content="Shoppy" />
 
     <!-- TODO: <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" /> -->
     <!-- TODO: <link rel="icon" href="%PUBLIC_URL%/favicon.ico" /> -->
@@ -24,7 +24,7 @@
       rel="stylesheet"
     />
 
-    <title>Customer Zero</title>
+    <title>Shoppy</title>
   </head>
   <body>
     <div id="root"></div>
