--- a/public/index.html
+++ b/public/index.html
@@ -20,7 +20,7 @@
     />
 
     <link
-      href="https://fonts.googleapis.com/css2?family=Lato:ital,wght@0,300;0,400;0,700;0,900;1,300;1,400;1,700&display=swap"
+      href="https://fonts.googleapis.com/css2?family=Roboto Slab:ital,wght@0,300;0,400;0,700;0,900;1,300;1,400;1,700&display=swap"
       rel="stylesheet"
     />
 
