migrate to vite

--- a/index.html
+++ b/index.html
@@ -7,10 +7,6 @@
     <meta name="theme-color" content="#000000" />
     <meta name="description" content="Shoppy" />
 
-    <!-- TODO: <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" /> -->
-    <!-- TODO: <link rel="icon" href="%PUBLIC_URL%/favicon.ico" /> -->
-    <!-- TODO: <link rel="manifest" href="%PUBLIC_URL%/manifest.json" /> -->
-
     <link rel="preconnect" href="https://fonts.googleapis.com" />
 
     <link
@@ -28,5 +24,7 @@
   </head>
   <body>
     <div id="root"></div>
+
+    <script type="module" src="/src/index.tsx"></script>
   </body>
 </html>
