add an above-the-fold body color before CSS loads

--- a/public/index.html
+++ b/public/index.html
@@ -20,6 +20,12 @@
     />
 
     <title>Shoppy</title>
+
+    <style>
+      body {
+        background-color: #212121;
+      }
+    </style>
   </head>
   <body>
     <div id="root"></div>
