add fallback for first load

--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="utf-8" />
 
     <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <meta name="theme-color" content="#000000" />
+    <meta name="theme-color" content="#151C20" />
     <meta name="description" content="Shoppy" />
 
     <link rel="preconnect" href="https://fonts.googleapis.com" />
@@ -17,7 +17,7 @@
 
     <title>Shoppy</title>
   </head>
-  <body>
+  <body data-theme="stitch">
     <div id="root"></div>
 
     <script type="module" src="/src/index.tsx"></script>
