--- a/index.html
+++ b/index.html
@@ -15,6 +15,16 @@
       rel="stylesheet"
     />
 
+    <!-- prefetch product images before the bundle loads -->
+    <link rel="prefetch" href="/images/stitch/1.png" />
+    <link rel="prefetch" href="/images/stitch/2.png" />
+    <link rel="prefetch" href="/images/stitch/3.png" />
+    <link rel="prefetch" href="/images/luminara/1.png" />
+    <link rel="prefetch" href="/images/luminara/2.png" />
+    <link rel="prefetch" href="/images/pug/1.png" />
+    <link rel="prefetch" href="/images/pug/2.png" />
+    <link rel="prefetch" href="/images/pug/3.png" />
+
     <title>Shoppy</title>
   </head>
   <body data-theme="stitch">
