use vite webfont plugin to avoid render blocking

--- a/index.html
+++ b/index.html
@@ -45,12 +45,9 @@
     <link rel="preload" as="image" type="image/png" href="/images/pug/2.png" />
     <link rel="preload" as="image" type="image/png" href="/images/pug/3.png" />
 
-    <!-- preload the Lato font -->
     <link
       href="https://fonts.googleapis.com/css2?family=Lato:wght@400;700&display=swap"
-      rel="preload"
-      as="style"
-      onload="this.onload=null;this.rel='stylesheet'"
+      rel="stylesheet"
     />
 
     <title>Shoppy</title>
