rename Acme Co to ProficiencyLabs in codebase

--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
 
     <title>Shoppy</title>
   </head>
-  <body data-theme="acme">
+  <body data-theme="proficiency">
     <div id="root"></div>
 
     <script type="module" src="/src/index.tsx"></script>
