update theStitch colors to match Figma design

--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="utf-8" />
 
     <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <meta name="theme-color" content="#151C20" />
+    <meta name="theme-color" content="#FCFDFD" />
     <meta name="description" content="Shoppy" />
 
     <link rel="preconnect" href="https://fonts.googleapis.com" />
