Update title and description for SEO

--- a/index.html
+++ b/index.html
@@ -1,6 +1,9 @@
 <!doctype html>
 <html lang="en">
   <head>
+    <title>Metabase Embedded Analytics SDK demo</title>
+    <description>Explore the interactive demo to see how embedded analytics fits the look and feel of an ecommerce app's UI, built with Metabase's embedded analytics SDK. Style interactive React components for seamless integration with your product.
+</description>
     <meta charset="utf-8" />
 
     <meta name="viewport" content="width=device-width, initial-scale=1" />
