--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
   <head>
     <title>Metabase Embedded Analytics SDK demo</title>
-    <meta name="description" content="Explore the interactive demo to see how embedded analytics fits the look and feel of an ecommerce app's UI, built with Metabase's embedded analytics SDK. Style interactive React components for seamless integration with your product." />
+    <meta name="description" content="Explore the interactive demo to see how embedded analytics fits the look and feel of an e-commerce app's UI, built with Metabase's embedded analytics SDK. Style interactive React components for seamless integration with your product." />
     <meta charset="utf-8" />
 
     <meta name="viewport" content="width=device-width, initial-scale=1" />
